Bug 443244 - find next/previous icon inconsistence
Summary: find next/previous icon inconsistence
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: keyboard (other bugs)
Version First Reported In: 19.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-03 04:48 UTC by Emily Grace Seville
Modified: 2021-10-08 05:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emily Grace Seville 2021-10-03 04:48:19 UTC
There is an inconsistence in find next/previous icons in terminal and shortcut settings.

STEPS TO REPRODUCE


OBSERVED RESULT
In terminal find next is an arrow up and in shortcuts it is an arrow down, the same applies for find previous but contradictionary.

EXPECTED RESULT
Find next must be have an arrow down icon and find previous an arrow up icon in both places (terminal and shortcut settings).

SOFTWARE/OS VERSIONS
OS: Linux Mint 20.2 Cinnamon

ADDITIONAL INFORMATION
Konsole is installed via "sudo apt install konsole -y".
Comment 1 Fushan Wen 2021-10-03 06:51:39 UTC
Confirmed in git-master.
Comment 2 Fushan Wen 2021-10-03 07:06:15 UTC
Can you confirm "Search backwards" is checked?
Comment 3 Emily Grace Seville 2021-10-03 07:12:48 UTC
Yes, thanks, it helps. This issue is my mistake, sorry. :)
Comment 4 Fushan Wen 2021-10-03 07:13:49 UTC
Menu icon should be updated when "Search backwards" is checked, so I guess it's still a bug.
Comment 5 Bug Janitor Service 2021-10-03 08:12:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/497
Comment 6 Fushan Wen 2021-10-07 20:27:28 UTC
Git commit 49ccf099c130be28da5a1972b247f1480d9d7159 by Fushan Wen.
Committed on 07/10/2021 at 14:33.
Pushed by hindenburg into branch 'master'.

Make "Find Next/Previous" icons in Edit menu consistent with those in the search bar

There is an inconsistence in "Find Next/Previous" icons in Edit menu and
the search bar. Make sure they are consistent whenever "Search backwards"
is checked or not.

M  +13   -0    src/session/SessionController.cpp
M  +1    -0    src/session/SessionController.h
M  +1    -0    src/widgets/IncrementalSearchBar.cpp
M  +5    -0    src/widgets/IncrementalSearchBar.h

https://invent.kde.org/utilities/konsole/commit/49ccf099c130be28da5a1972b247f1480d9d7159