Make "Find Next/Previous" icons in Edit menu consistent with those in the search bar

There is an inconsistence in "Find Next/Previous" icons in Edit menu and
the search bar. Make sure they are consistent whenever "Search backwards"
is checked or not.

BUG: 443244